--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,17 @@
 <LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#EAEEEF"
+    android:background="@drawable/background"
     android:gravity="center"
     android:padding="50px"
     android:orientation="vertical"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ImageView
+        android:layout_width="108dp"
+        android:layout_height="200px"
+        android:background="@drawable/download" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,15 +21,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/name"
         android:hint="enter your name"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Password"/>
+
     <EditText
+        android:id="@+id/pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pass"
-        android:hint="enter your password"/>
+        android:drawableLeft="@drawable/baseline_app_registration_24"
+        android:hint="enter your password" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
